--- a/06. object.md
+++ b/06. object.md
@@ -108,3 +108,61 @@
     }, 시간(밀리초단위));
     ```
     - setTimeout을 재귀함수로 계속 호출하면 setInterval과 동일하게 동작한다.
+
+## 6. DOM(Document Object Model)
+1. DOM은 HTML 웹 문서에 선언된 태그들을 직접 선택하여 조작이 가능한 객체 모델.
+2. DOM에서 태그를 선택하는 방식
+    - document.getEelementById(태그의 아이디 값): 태그에 지정된 아이디로 태그를 선택해서 객체로 가져옴. 아이디는 한 웹 문서안에서 유일해야하므로 태그가 하나씩 선택된다.
+    - document.getElementsByClassName(태그의 클래스 값): 태그에 지정된 클래스로 태그를 선택해서 객체로 가져옴. 클래스는 중복가능해서 여러개 태그를 배열로 반환.
+    - document.getElementsByTagName(태그명): 태그 이름으로 태그를 선택해서 객체로 가져옴.
+    - document.querySelector(css선택자): css선택자에 해당하는 태그를 선택해서 객체로 가져옴. css선택자에는 #아이디, .클래스 등 css에서 사용했던 선택자를 넣어주면 된다.
+3. DOM의 속성값 변경
+    - 스타일 변경: 태그선택.style.속성 = 속성값;
+    - 태그의 속성의 값 확인: 태그선택.속성명;
+    - 태그의 속성의 값 변경: 태그선택.속성명 = 새로운 속성 값;
+    - 태그의 속성의 값 확인하는 메소드: 태그선택.getAttribute(속성명);
+    - 태그의 속성의 값 변경하는 메소드: 태그선택.setAttribute(속성명, 새로운 속성값);
+    - 태그의 모든 하위태그 확인: 태그선택.innerHTML;
+    - 태그의 모든 하위태그를 삭제하고 새로운 태그를 추가: 태그선택.innerHTML = 새로운 태그 문자열;
+    - 태그의 모든 하위 텍스트 확인: 태그선택.innerText;
+    - 태그의 모든 하위 태그 삭제하고 새로운 텍스트를 추가: 태그선택.innerText = 새로운 텍스트;
+    - 태그의 이벤트 등록: 태그선택.addEventListner(등록될이벤트(클릭, 더블클릭, ...), 콜백함수(이벤트가 발생했을 때 동작할 실행문))
+    - 태그의 이벤트 삭제: 태그선택.removeEventListner(등록된 이벤트);
+    - 간단하게 이벤트 등록: 태그선택.이벤트 = function() {
+
+    };
+
+## 7. 사용자 정의 객체
+1. ES5 버전까지는 class라는 개념이 없었다. class를 정의하지 않고 객체를 직접 만들거나 생성자 함수를 통해서만 객체를 생성하여 사용할 수 있었다.
+2. 객체 생성 방식
+    - 
+    ```
+    const 객체변수명 = new Object();
+    const 객체변수명 = {
+        속성,
+        기능
+    };
+    ```
+3. 객체 사용
+    - 
+    ```
+    console.log(객체변수명.속성키);
+    객체변수명.속성키 = 값;
+    객체변수명.함수명(파라미터);
+    ```
+4. 사용자 정의 함수를 통한 생성자 함수
+    - 객체를 별도로 선언하지 않고도 생성자 함수만 정의하여 객체를 생성하는 방식
+    -
+    ``` 
+    function 객체명(파라미터) {
+        파라미터들로 속성들 초기화
+    }
+
+    const 객체변수명 = new 객체명(초기화값);
+    ```
+5. 자바스크립트의 객체는 키와 값으로 매핑되어 있다. 키값은 문자열로 지정해야되는데 ", ' 묶지 않아도 문자열로 지정된다.
+
+## 8. prototype
+1. 자바스크립트는 prototype기반의 객체지향언어이다. 자바스크립트의 모든 객체는 prototype을 상속받아 만들어지고 각각 prototype를 가지고 있다.
+2. 자바스크립트에서 function으로 생성하는 일반적인 함수는 prototype을 상속받은 객체 중 일부.
+3. 사용자 정의 객체를 만들 때 prototype에 공통 메소드를 등록하면 자바의 static 메소드처럼 한 번만 생성되어 메모리에 등록되기 때문에 메모리 낭비를 줄일 수 있다.
