--- a/08. ES6.md
+++ b/08. ES6.md
@@ -24,50 +24,50 @@
 3. Math.pow()와 동일한 기능
 4. 음수를 연산할 때는 음수를 소괄호()로 묶는다.
 
-## 4. 논리 연산자를 이용한 단축평가
-1. &&나 || 연산 시 연산의 결과가 true, flase가 아닐 수도 있다.
-2. &&나 || 연산 결과가 결정되는 시점의 값이 리턴되는 것을 단출 평가라고 한다.
-3. && 는 두 개 피연산자가 모두 true여야 true가 리턴되는데 true나 false가 첫 번째 피연산자가 true일 경우 결과가 결정되는 시점은 두 번째 피연산자이다.
+## 4. 논리연산자를 이용한 단축평가
+1. &&나 || 연산 시 연산의 결과가 true, false가 아닐 수도 있다.
+2. &&나 || 연산 결과가 결정되는 시점의 값이 리턴되는 것을 단축평가라고 한다.
+3. &&는 두 개 피연산자가 모두 true여야 true가 리턴되는데 true나 false가 첫 번째 피연산자가 true일 경우 결과가 결정되는 시점은 두 번째 피연산자이다.
 ```
     true && 결과를 결정하는 시점
-    'bit' && 'camp' => 'camp' 리턴(값이 있으면 true로 판단)
+    'bit' && 'camp'=> 'camp' 리턴(값이 있으면 true로 판단)
 
-    false && 어떤 값이 오던지 false
+    false && 어떤값이 오던지 false => false 리턴
 
     false || 결과를 결정하는 시점
-    false || 'bit' => 'bit'리턴
-    'camp' || 어떤 값이 와도 true => 'camp' 리턴
+    false || 'bit' => 'bit' 리턴
+    'camp' || 어떤값이 와도 true => 'camp' 리턴 
 ```
-4. 단축평가는 논리연산자 (&&, ||)의 true, false를 결정하는 시점의 값을 리턴하는 것.
+4. 단축평가는 논리연산자(&&, ||)의 true, false를 결정하는 시점의 값을 리턴하는 것.
 5. 
 ```
-true && 리턴값
-false && 뭐가오든 상관없이 false => false 리턴
+true && 리턴값 => 리턴값이 리턴
+false && 뭐가오든 상관없이 false => false리턴
 
 true || 뭐가오든 상관없이 true => true리턴
 false || 리턴값 => 리턴값이 리턴
 ```
 
 ## 5. 객체에 추가된 기능들
-1. 속성 축약 표현
+1. 속성 축약표현
     - 기존에 ES5에서는 객체를 중괄호 블록으로 만들고 그 안에 속성을 키와 값으로 지정했다.
-```
-var obj = {
-    x: 1,
-    y: 2
-};
-```
-- ES6에서는 속성의 축약표현이라는 기능이 추가되었다.
-- 속성의 축약표현 변수를 선언하고 속성으로 그 변수를 넣어주면 변수명이 키로 자동할당되는 기능
-```
-let x = 1;
-let y = 2;
+    ```
+    var obj = {
+        x: 1,
+        y: 2
+    };
+    ```
+    - ES6에서는 속성의 축약표현이라는 기능이 추가되었다.
+    - 속성의 축약표현 변수를 선언하고 속성으로 그 변수를 넣어주면 변수명이 키로 자동할당되는 기능
+    ```
+    let x = 1;
+    let y = 2;
 
-const obj = {x, y};
-```
+    const obj = {x, y};
+    ```
 2. 계산된 프로퍼티 이름
-    - 템플릿 리터럴의 표현식 삽입기능을 이용해서 동적으로 속성키를 만들어주는 기능.
-    - 기존 ES5에서는 속성키를 동작으로 생성하려면 []를 이용해서 문자열 결합연산자를 이용했는데 ES6에서는 템플릿 리터럴로 속성키와 값을 바로 매핑할 수 있다.
+    - 템플릿 리터럴의 표현식 삽입 기능을 이용해서 동적으로 속성키를 만들어주는 기능.
+    - 기존 ES5에서는 속성키를 동적으로 생성하려면 []를 이용해서 문자열 결합연산자를 이용했는데 ES6에서는 템플릿 리터럴로 속성키와 값을 바로 매핑할 수 있다.
     ```
     //ES5
     var obj = {};
@@ -77,8 +77,7 @@ const obj = {x, y};
     obj['value_' + (++i)] = i;
     obj['value_' + (++i)] = i;
     obj['value_' + (++i)] = i;
-    
-    ```
+
     //ES6
     let j = 0;
     const obj = {
@@ -88,6 +87,166 @@ const obj = {x, y};
         [`value_${++j}`]: j
     };
 3. 메소드 축약표현
-    - ES5에서는 객체에 메소드를 추가할 때 키값과 function키워드로 메소드를 추가했었는데 ES6에서는 function를 생략할 수 있다.
+    - ES5에서는 객체에 메소드를 추가할 때 키값과 function 키워드로 메소드를 추가했었는데 ES6에서는 function를 생략할 수 있다.
 
-## 6. 
+## 6. ES6에서 새로 도입된 class
+1. 객체지향에 익숙한 개발자들이 prototype 기반의 객체를 생성하고 사용하는 어려움을 겪어서 class 개념을 도입하게 되었다.
+2. ES5에서 상속은 prototype을 이용한 상속밖에 없었는데 class가 등장하면서 extends 키워드로 class간의 상속도 지원된다.
+3. prototype 기반은 유지되면서 객체를 만드는 새로운 방식이 추가된 것.
+4. prototype 기반 객체보다 편하게 상속을 사용할 수 있다.(extends, super 키워드 사용 가능)
+5. class의 선언
+    - class에는 속성(필드)는 지정할 수 없고 메소드만 선언가능
+    - 
+    ```
+    class 객체명 {
+        //생성자함수
+        //생성자함수의 명칭은 무조건 constructor로 지정해야한다.
+        constructor(매개변수) {
+            초기화;
+            //속성생성 및 초기화
+            this.속성키 = 초기화값;
+        }
+        //일반 메소드(프로토타입 메소드)
+        메소드명(매개변수) {
+
+        }
+        //정적 메소드(static 키워드 사용가능)
+        static 메소드명(매개변수) {
+            
+        }
+        //getter, setter메소드
+        get getter 메소드명() {
+
+        }
+        set setter 메소드명() {
+
+        }
+    }
+    ```
+6. class의 사용
+    - new 키워드로 인스턴스화를 진행한 후 사용한다.
+    - 
+    ```
+    const 변수명 = new 객체명();
+    ```
+7. class의 상속
+    - extends 키워드로 기존 class를 상속받아 새로운 class를 만들 수 있다.
+    -
+    ```
+    class 부모 {
+
+    }
+
+    class 자식 extends 부모 {
+
+    }
+    ```
+    - 일반 메소드(function 키워드로 생성한 메소드)는 생성자 함수의 역할도 한다. 그래서 생성자 함수를 상속받는 class도 만들수 있다.
+
+## 7. 화살표 함수
+1. 문법은 자바의 람다식이랑 동일하다.
+2. ES5까지는 모든 메소드가 일급객체로 생성되어 불필요하게 prototype이 생성됐다. 메모리 부족현상이 발생하는 경우가 생겼었는데 이러한 문제를 해결하기 위해 화살표 함수라는 개념이 도입되었다.
+3. 화살표 함수는 일급객체가 아닌 함수의 기능만 하는 순수함수로 생성되고 일급객체가 아니라서 생성자 함수로 사용이 불가능하다.
+4. 화살표 함수는 function 키워드 대신 =>를 사용한다.
+5. 화살표 함수와 일반함수의 차이점
+    - 화살표 함수는 일급객체가 아니다.
+    - 화살표 함수는 생성자 함수로 사용 불가
+    - 화살표 함수는 prototype이 생성되지 않는다.
+    - 화살표 함수는 중복된 매개변수명을 사용할 수 없다.
+    - 화살표 함수는 arguments, this, super 등을 바인딩할 수 없다.
+
+## 8. Rest 파라미터
+1. ...키워드를 이용해서 함수에 전달되는 매개변수들을 배열로 받아오는 기능
+```
+fucntion add(...변수명) {
+    변수명을 배열로 이용.
+}
+const 함수명 = (...변수명) => {
+    변수명을 배열로 이용.
+}
+```
+
+## 9. 매개변수의 기본 값 지정
+1. ES6에서는 함수를 정의할 때 매개변수의 기본값을 지정할 수 있다.
+```
+const add = (a = 10, b = 20) => {
+    return a + b;
+}
+
+function add(a = 10, b = 20) {
+    return a + b;
+}
+```
+2. Rest 파라미터 사용 시에는 기본 값을 지정할 수 없다.
+
+## 10. 배열의 고차함수
+1. 반복문과 조건문의 사용을 줄이기 위해서 도입된 기능들. 화살표 함수와 함께 사용된다.
+2. 자바의 스트림과 비슷한 기능.
+3. 배열의 고차함수의 종류
+    -
+    ``` 
+    forEach: 배열의 모든 요소를 순회하면서 지정된 콜백함수를 계속 호출.
+    const arr = [1, 2, 3, 4, 5];
+    const arr2 = [];
+
+    배열.forEach(하나씩 꺼내서 쓸 변수명 => 콜백함수)
+    arr.forEach(item => arr2.push(item * 2));
+
+    map: 배열의 모든 요소를 순회하면서 지정된 콜백함수를 계속 호출. 콜백함수에서 반환해준 값으로 이뤄진 새로운 배열을 리턴.
+
+    리턴될배열을 받아줄 변수 = 배열.map(하나씩 꺼내서 쓸 변수명 => 콜백함수);
+    const arr3 = arr.map(item => item * 3);
+
+    filter: 배열의 모든 요소를 순회하면서 지정된 콜백함수를 계속 호출. 콜백함수의 반환값이 true인 요소들만으로 이뤄진 새로운 배열을 리턴.
+
+    리턴될배열을 받아줄 변수 = 배열.filter(하나씩 꺼내서 쓸 변수명 => 콜백함수);
+    const arr4 = arr.filter(item => item > 2); //3, 4, 5
+    const arr5 = arr.filter(item => item % 3); //0이 아닌 값은 true, 0은 false
+
+    reduce: 배열의 모든 요소를 순회하면서 지정된 콜백함수를 계속 호출. 콜백함수의 리턴 값을 다음 콜백함수 호출 시 첫 번째 매개변수로 받아서 하나의 결과값을 만들어서 리턴.
+    
+    const 변수 = 배열.reduce((이전콜백의 리턴값, 현재 꺼내온 변수, 인덱스) => 콜백함수);
+    const sum = arr.reduce((prior, current) => prior + current, 첫 번째 요소에 접근했을 때 이전 요소의 초기값);
+
+    ```
+
+## 11. 스프레드 문법
+1. Rest 파라미터와 마찬가지로 ... 키워드를 사용한다.
+2. Rest 파라미터가 남은 파라미터들을 배열로 묶어주는 문법이었다면 스프레드 문법은 배열로 들어온 값들을 펼쳐서 개별적인 값들의 목록을 만들어 주는 것
+3. Rest 파라미터가 배열로 묶어주는 역할을 한다면 스프레드 문법은 분리해주는 역할을 해서 정반대되는 개념이다.
+4. 개별적인 변수에 담을 수도 없다.
+
+## 12. 비구조화 할당(디스트럭처링 할당)
+1. 배열이나 객체의 구조를 파괴하여 1개 이상의 변수로 만들어주는 작업
+```
+//ES5 배열
+var arr = [1, 2, 3];
+var num1, num2, num3;
+
+num1 = arr[0];
+num2 = arr[1];
+num3 = arr[2];
+
+//ES6 배열
+const arr = [1, 2, 3];
+const [num1, num2, num3] = arr;
+
+//ES5 객체
+var obj = {
+    id: 1,
+    name: '홍길동',
+};
+
+var id, name;
+
+id = obj.id;
+name = obj.name;
+
+//ES6 객체
+const obj = {
+    id: 1,
+    name: '홍길동',
+};
+
+const {id, name} = obj;
+```
